[tool.poetry]
name = "async-alchemy"
version = "0.1.0"
description = "An asynchronous SQL Alchemy library that supports Connection Pools"
authors = ["KyungHo Kim <qqaa3030@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11, <4"
urllib3 = "<2"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
